<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtWOrder"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/worder"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtDElNote"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/delnote"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtCompany"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/company"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtInvoice"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:text="@string/invoice"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOnTheWay"
        android:layout_width="54.5dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_header_cell_bg"
        android:textAlignment="center"
        android:text="@string/btnOtW"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPallet"
        android:layout_width="54.5dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_header_cell_bg"
        android:textAlignment="center"
        android:text="@string/btnPallet"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComplete"
        android:layout_width="164.5dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell_bg"

        android:text="@string/button1"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnException"
        android:layout_width="164.5dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_header_cell_bg"

        android:text="@string/button2"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/txttvdone"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="120.5dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="@drawable/table_header_cell_bg"
        android:textAlignment="center"
        android:text="@string/btnClear"
        android:textColor="@color/black"
        android:textSize="19sp" />


</LinearLayout>