<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="844dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="Vulcan Steel Manufacturing"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="429dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:text="Parts Exception Form"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="Driver:  "
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/tvDriver"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/textViewdate"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewdate"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="Date:"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvDriver"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="53dp"
        android:text="F-03-04-62"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="148dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoshort" />


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/hdrcbExc"
            android:layout_width="80dp"

            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cbExc"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/hdrpartName"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/partName"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/hdrpartQTY"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/partQTY"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/hdrspnReason"
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/partReason"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/hdrspnQTY"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/table_content_cell_bg"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/partQTY"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />


    </TableRow>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"


        android:layout_margin="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPartlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/part_list_item" />

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="53dp"
        android:text="Send"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        android:text="Back"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNotDelivered"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#81656464"
        android:text="Not Delivered"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/cBPhoto"
        android:layout_width="84dp"
        android:layout_height="38dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:text="Photo"
        app:layout_constraintBottom_toTopOf="@+id/tvDriver"
        app:layout_constraintStart_toStartOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>